--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,16 @@ header .icons {
   margin-bottom: 20px;
 }
 
+.home .home-photo {
+  width: 100%;
+  height: 100%;
+}
+
+.home .home-photo img {
+  width: 100%;
+  height: 100%;
+}
+
 .calender {
   width: 100vw;
   height: 300px;
@@ -151,6 +161,37 @@ header .icons {
   background-color: var(--gray);
   border-radius: 25px;
   box-shadow: var(--box--shadow);
+  padding: 15px;
+}
+
+.notice .notice-heading {
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 10px;
+  cursor: pointer;
+}
+
+.notice .notice-heading h3,
+.notice .notice-heading i {
+  font-size: 13px;
+  line-height: 8px;
+}
+
+.notice-container1 {
+  margin-bottom: 35px;
+}
+
+.notice .notice-content {
+  font-size: 10px;
+
+  display: none;
+}
+
+.notice .notice-content1.active,
+.notice .notice-content2.active {
+  display: block;
 }
 
 .footer {
