--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: var(--white);
+  background-color: var(--light-gray);
 }
 
 :root {
@@ -27,6 +27,7 @@ body {
   --color-hover: #edf0f5;
   --color-text: #151426;
 
+  --light-gray: #f4f3f9;
   --gray: #eeeeee;
   --purple: #a69fef;
 
@@ -55,6 +56,10 @@ header .logo {
   padding-left: 8px;
 }
 
+header .logo_img {
+  color: var(--purple);
+}
+
 header .navbar a {
   font-size: 18px;
   border-radius: 5px;
@@ -64,7 +69,7 @@ header .navbar a {
 }
 
 header .navbar a:hover {
-  background-color: #a69fef;
+  background-color: var(--purple);
   color: var(--color-hover);
 }
 
@@ -72,7 +77,7 @@ header .icons i {
   font-size: 18px;
   color: var(--color-text);
   text-align: center;
-  background-color: #a69fef;
+  background-color: var(--purple);
   width: 35px;
   height: 35px;
   text-align: center;
@@ -87,7 +92,7 @@ header .icons {
 .home {
   width: 100vw;
   height: 400px;
-  background-color: var(--gray);
+  background-color: var(--light-gray);
   margin-bottom: 20px;
 }
 
@@ -122,19 +127,18 @@ header .icons {
 .calender .calender-box {
   width: 90%;
   height: 80%;
-  background-color: var(--gray);
-  border-radius: 25px;
+  background-color: var(--white);
+  border-radius: 15px;
   box-shadow: var(--box--shadow);
 }
 
-.notice,
-.book {
+.notice {
   width: 100vw;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
   flex-direction: column;
 }
 
@@ -146,6 +150,16 @@ header .icons {
   font-size: 15px;
 }
 
+.book {
+  width: 100vw;
+  height: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
+  flex-direction: column;
+}
+
 .book .book-subject {
   width: 90%;
   height: 10%;
@@ -154,17 +168,31 @@ header .icons {
   font-size: 15px;
 }
 
-.notice .notice-box,
+.notice .notice-box {
+  width: 90%;
+  height: 30%;
+  background-color: var(--white);
+  border-radius: 15px;
+  box-shadow: var(--box--shadow);
+  padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
 .book .book-box {
   width: 90%;
   height: 80%;
-  background-color: var(--gray);
-  border-radius: 25px;
+  background-color: var(--white);
+  border-radius: 15px;
   box-shadow: var(--box--shadow);
-  padding: 15px;
+  padding: 25px;
 }
 
 .notice .notice-heading {
+  width: 100%;
   padding: 10px;
   display: flex;
   align-items: center;
@@ -179,19 +207,64 @@ header .icons {
   line-height: 8px;
 }
 
-.notice-container1 {
-  margin-bottom: 35px;
-}
-
 .notice .notice-content {
   font-size: 10px;
-
   display: none;
 }
 
+.notice.active {
+  height: 300px;
+}
 .notice .notice-content1.active,
 .notice .notice-content2.active {
   display: block;
+}
+
+.notice .notice-box1.active,
+.notice .notice-box2.active {
+  height: 50%;
+}
+
+.book .slide {
+  width: 80px;
+  height: 110px;
+}
+
+.book .slide .image {
+  position: relative;
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  border-radius: 10px;
+}
+
+.book .slide .image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.book .slide .content {
+  display: none;
+  padding: 1rem 0;
+  text-align: center;
+}
+
+.book .slide .content_info {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+}
+
+.book .slide .content h3 {
+  font-size: 2.5rem;
+  color: var(--black);
+}
+
+.book .slide .content h2 {
+  font-size: 2rem;
+  color: var(--black);
 }
 
 .footer {
