--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
 
   --border: 1px solid rgba(0, 0, 0, 0.2);
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --box--shadow: 0 7px 7px rgba(0, 0, 0, 0.05);
+  --box-shadow: 0 12px 12px rgba(0, 0, 0, 0.05);
 }
 
 header {
@@ -41,19 +41,20 @@ header {
   top: 0;
   left: 0;
   right: 0;
-  padding: 18px 15px;
+  padding: 15px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
-  background-color: var(--white);
+  background-color: var(--light-gray);
 }
 
 header .logo {
   color: var(--color-text);
   font-size: 18px;
   padding-left: 8px;
+  font-weight: bolder;
 }
 
 header .logo_img {
@@ -93,7 +94,7 @@ header .icons {
   width: 100vw;
   height: 400px;
   background-color: var(--light-gray);
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .home .home-photo {
@@ -108,12 +109,14 @@ header .icons {
 
 .calender {
   width: 100vw;
-  height: 300px;
+  height: 330px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   flex-direction: column;
+  background-color: var(--white);
+  padding: 15px 0;
 }
 
 .calender .calender-subject {
@@ -122,14 +125,14 @@ header .icons {
   display: flex;
   margin-bottom: 5px;
   font-size: 15px;
+  font-weight: bolder;
 }
 
 .calender .calender-box {
   width: 90%;
   height: 80%;
-  background-color: var(--white);
-  border-radius: 15px;
-  box-shadow: var(--box--shadow);
+  background-color: var(--light-gray);
+  border-radius: 10px;
 }
 
 .notice {
@@ -148,16 +151,19 @@ header .icons {
   display: flex;
   margin-bottom: 15px;
   font-size: 15px;
+  font-weight: bolder;
 }
 
 .book {
   width: 100vw;
-  height: 200px;
+  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 30px;
   flex-direction: column;
+  background-color: var(--white);
+  padding: 20px 0;
 }
 
 .book .book-subject {
@@ -166,14 +172,14 @@ header .icons {
   display: flex;
   margin-bottom: 15px;
   font-size: 15px;
+  font-weight: bolder;
 }
 
 .notice .notice-box {
   width: 90%;
   height: 30%;
   background-color: var(--white);
-  border-radius: 15px;
-  box-shadow: var(--box--shadow);
+  border-radius: 10px;
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -185,10 +191,12 @@ header .icons {
 .book .book-box {
   width: 90%;
   height: 80%;
-  background-color: var(--white);
-  border-radius: 15px;
-  box-shadow: var(--box--shadow);
+  background-color: var(--light-gray);
+  border-radius: 10px;
   padding: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .notice .notice-heading {
