--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-  background-color: var(--light-gray);
+  background-color: var(--white);
 }
 
 :root {
@@ -27,7 +27,7 @@ body {
   --color-hover: #edf0f5;
   --color-text: #151426;
 
-  --light-gray: #f4f3f9;
+  --light-gray: #f5f5f5;
   --gray: #eeeeee;
   --purple: #a69fef;
 
@@ -47,7 +47,7 @@ header {
   align-items: center;
   z-index: 1000;
   border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
-  background-color: var(--light-gray);
+  background-color: var(--white);
 }
 
 header .logo {
@@ -91,7 +91,7 @@ header .icons {
 }
 
 .home {
-  width: 100vw;
+  width: 100%;
   height: 400px;
   background-color: var(--light-gray);
   margin-bottom: 15px;
@@ -108,14 +108,13 @@ header .icons {
 }
 
 .calender {
-  width: 100vw;
+  width: 100%;
   height: 330px;
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   flex-direction: column;
-  background-color: var(--white);
   padding: 15px 0;
 }
 
@@ -123,49 +122,40 @@ header .icons {
   width: 90%;
   height: 10%;
   display: flex;
-  margin-bottom: 5px;
+  margin-bottom: 15px;
   font-size: 15px;
   font-weight: bolder;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .calender .calender-box {
   width: 90%;
   height: 80%;
   background-color: var(--light-gray);
-  border-radius: 10px;
+  border-radius: 15px;
 }
 
 .notice {
-  width: 100vw;
+  width: 100%;
   height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 10px;
   flex-direction: column;
 }
 
-.notice .notice-subject {
-  width: 90%;
-  height: 10%;
-  display: flex;
-  margin-bottom: 15px;
-  font-size: 15px;
-  font-weight: bolder;
-}
-
 .book {
-  width: 100vw;
+  width: 100%;
   height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 30px;
   flex-direction: column;
-  background-color: var(--white);
   padding: 20px 0;
 }
 
+.notice .notice-subject,
 .book .book-subject {
   width: 90%;
   height: 10%;
@@ -173,13 +163,22 @@ header .icons {
   margin-bottom: 15px;
   font-size: 15px;
   font-weight: bolder;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.calender .calender-subject i,
+.notice .notice-subject i,
+.book .book-subject i {
+  color: var(--purple);
+  margin-right: 5px;
 }
 
 .notice .notice-box {
   width: 90%;
   height: 30%;
-  background-color: var(--white);
-  border-radius: 10px;
+  background-color: var(--light-gray);
+  border-radius: 15px;
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -191,9 +190,9 @@ header .icons {
 .book .book-box {
   width: 90%;
   height: 80%;
-  background-color: var(--light-gray);
-  border-radius: 10px;
-  padding: 25px;
+  border-radius: 15px;
+  padding: 0 25px;
+  padding-top: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -234,8 +233,9 @@ header .icons {
 }
 
 .book .slide {
-  width: 80px;
+  width: 90px;
   height: 110px;
+  box-shadow: var(--box-shadow);
 }
 
 .book .slide .image {
@@ -276,8 +276,27 @@ header .icons {
 }
 
 .footer {
-  width: 100vw;
-  height: 150px;
+  width: 100%;
+  height: 100px;
+  margin-top: 30px;
+  border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.footer .footer-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 25px;
+}
+
+.footer .footer-content {
+  width: 100%;
+  font-size: 10px;
+  opacity: 80%;
 }
 
 @media screen and (max-width: 768px) {
