--- a/css/style.css
+++ b/css/style.css
@@ -46,7 +46,7 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
-  border-bottom: 0.1rem solid rgba(0, 0, 0, 0.2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background-color: var(--white);
 }
 
@@ -74,6 +74,13 @@ header .navbar a:hover {
   color: var(--color-hover);
 }
 
+header .icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
 header .icons i {
   font-size: 18px;
   color: var(--color-text);
@@ -86,6 +93,14 @@ header .icons i {
   border-radius: 50%;
 }
 
+header .icons .login {
+  background-color: var(--purple);
+  border-radius: 10px;
+  padding: 8px 10px;
+  color: var(--color-text);
+  font-size: 13px;
+  margin-right: 10px;
+}
 header .icons {
   display: none;
 }
@@ -109,7 +124,7 @@ header .icons {
 
 .calender {
   width: 100%;
-  height: 330px;
+  height: 400px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -127,10 +142,11 @@ header .icons {
   font-weight: bolder;
   justify-content: flex-start;
   align-items: center;
+  opacity: 80%;
 }
 
 .calender .calender-box {
-  width: 90%;
+  width: 85%;
   height: 80%;
   background-color: var(--light-gray);
   border-radius: 15px;
@@ -165,6 +181,7 @@ header .icons {
   font-weight: bolder;
   justify-content: flex-start;
   align-items: center;
+  opacity: 80%;
 }
 
 .calender .calender-subject i,
@@ -175,9 +192,9 @@ header .icons {
 }
 
 .notice .notice-box {
-  width: 90%;
+  width: 85%;
   height: 30%;
-  background-color: var(--light-gray);
+  background-color: var(--purple);
   border-radius: 15px;
   padding: 15px;
   display: flex;
@@ -188,7 +205,7 @@ header .icons {
 }
 
 .book .book-box {
-  width: 90%;
+  width: 85%;
   height: 80%;
   border-radius: 15px;
   padding: 0 25px;
@@ -206,6 +223,7 @@ header .icons {
   justify-content: space-between;
   gap: 10px;
   cursor: pointer;
+  color: var(--white);
 }
 
 .notice .notice-heading h3,
@@ -217,6 +235,7 @@ header .icons {
 .notice .notice-content {
   font-size: 10px;
   display: none;
+  color: var(--white);
 }
 
 .notice.active {
@@ -233,8 +252,8 @@ header .icons {
 }
 
 .book .slide {
-  width: 90px;
-  height: 110px;
+  width: 120px;
+  height: 140px;
   box-shadow: var(--box-shadow);
 }
 
@@ -275,11 +294,40 @@ header .icons {
   color: var(--black);
 }
 
+.quick {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quick .quick-box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.quick .quick-box i {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 60px;
+  font-size: 20px;
+  background-color: var(--purple);
+  padding: 5px;
+  border-radius: 50%;
+  margin: 0 5px;
+  color: var(--white);
+  box-shadow: var(--box-shadow);
+}
+
 .footer {
   width: 100%;
   height: 100px;
   margin-top: 30px;
-  border-top: 0.1rem solid rgba(0, 0, 0, 0.2);
+  border-top: 1px solid rgba(0, 0, 0, 0.2);
   display: flex;
   justify-content: flex-start;
   align-items: center;
@@ -301,7 +349,7 @@ header .icons {
 
 @media screen and (max-width: 768px) {
   header .icons {
-    display: inline-block;
+    display: flex;
   }
 
   header .navbar {
