--- a/css/style.css
+++ b/css/style.css
@@ -93,10 +93,10 @@ header .icons i {
   border-radius: 50%;
 }
 
-header .icons .login {
+header .icons .sm-login {
   background-color: var(--purple);
   border-radius: 10px;
-  padding: 8px 10px;
+  padding: 8px 15px;
   color: var(--color-text);
   font-size: 13px;
   margin-right: 10px;
@@ -109,7 +109,6 @@ header .icons {
   width: 100%;
   height: 400px;
   background-color: var(--light-gray);
-  margin-bottom: 15px;
 }
 
 .home .home-photo {
@@ -122,7 +121,70 @@ header .icons {
   height: 100%;
 }
 
-.calender {
+.login {
+  width: 100%;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 30px 0;
+  padding-bottom: 0;
+}
+
+.login .login-box {
+  width: 95%;
+  height: 100%;
+  background-color: var(--light-gray);
+  border-radius: 15px;
+  padding: 25px;
+}
+
+.login .login-header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+  margin-bottom: 30px;
+}
+
+.login .login-header h3 {
+  color: #6155d1;
+  font-size: 25px;
+  margin-right: 5px;
+}
+
+.login .login-header span {
+  opacity: 80%;
+}
+
+.login .login-content,
+.login .login-content2 {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.login .login-content {
+  margin-bottom: 10px;
+}
+
+.login .login-txt {
+  color: var(--white);
+  font-size: 10px;
+  background-color: var(--purple);
+  padding: 8px 8px;
+  border-radius: 25px;
+  margin-right: 5px;
+}
+
+.login .login-txt2 {
+  font-size: 10px;
+  background-color: var(--white);
+  padding: 8px 8px;
+  border-radius: 25px;
+  margin-right: 5px;
+}
+.calendar {
   width: 100%;
   height: 400px;
   display: flex;
@@ -133,7 +195,7 @@ header .icons {
   padding: 15px 0;
 }
 
-.calender .calender-subject {
+.calendar .calendar-subject {
   width: 90%;
   height: 10%;
   display: flex;
@@ -145,7 +207,7 @@ header .icons {
   opacity: 80%;
 }
 
-.calender .calender-box {
+.calendar .calendar-box {
   width: 85%;
   height: 80%;
   background-color: var(--light-gray);
@@ -184,7 +246,7 @@ header .icons {
   opacity: 80%;
 }
 
-.calender .calender-subject i,
+.calendar .calendar-subject i,
 .notice .notice-subject i,
 .book .book-subject i {
   color: var(--purple);
@@ -194,7 +256,7 @@ header .icons {
 .notice .notice-box {
   width: 85%;
   height: 30%;
-  background-color: var(--purple);
+  background-color: var(--light-gray);
   border-radius: 15px;
   padding: 15px;
   display: flex;
@@ -202,6 +264,10 @@ header .icons {
   align-items: center;
   flex-direction: column;
   margin-bottom: 20px;
+}
+
+.notice .notice-box1 {
+  background-color: var(--purple);
 }
 
 .book .book-box {
@@ -223,7 +289,6 @@ header .icons {
   justify-content: space-between;
   gap: 10px;
   cursor: pointer;
-  color: var(--white);
 }
 
 .notice .notice-heading h3,
@@ -235,7 +300,6 @@ header .icons {
 .notice .notice-content {
   font-size: 10px;
   display: none;
-  color: var(--white);
 }
 
 .notice.active {
@@ -292,35 +356,6 @@ header .icons {
 .book .slide .content h2 {
   font-size: 2rem;
   color: var(--black);
-}
-
-.quick {
-  width: 100%;
-  height: 100px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.quick .quick-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.quick .quick-box i {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 60px;
-  height: 60px;
-  font-size: 20px;
-  background-color: var(--purple);
-  padding: 5px;
-  border-radius: 50%;
-  margin: 0 5px;
-  color: var(--white);
-  box-shadow: var(--box-shadow);
 }
 
 .footer {
