--- a/css/notice.css
+++ b/css/notice.css
@@ -7,6 +7,7 @@
   flex-direction: column;
   padding: 15px 0;
   padding-bottom: 20px;
+  background-color: var(--light-gray);
 }
 
 .heading-box {
@@ -22,18 +23,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: var(--light-gray);
-  padding: 5px;
+  background-color: var(--purple);
+  padding: 8px 25px;
   border-radius: 15px;
   margin-bottom: 10px;
   font-size: 13px;
   text-align: center;
-  color: #6155d1;
 }
 
 .noticeboard {
   width: 100%;
-  height: 100vh;
+  height: 700px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,13 +47,14 @@
 }
 
 .notice-write {
-  width: 95%;
+  width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 15px;
   margin-top: 30px;
   opacity: 80%;
+  padding: 0 10px;
 }
 
 .notice-content {
@@ -64,7 +65,6 @@
   padding: 20px;
   border-radius: 10px;
   margin-bottom: 15px;
-  box-shadow: var(--box-shadow);
 }
 
 .notice-content-head {
@@ -83,6 +83,9 @@
   width: 20px;
   height: 20px;
   border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .notice-content-head span {
