--- a/css/statusbar.css
+++ b/css/statusbar.css
@@ -3,14 +3,14 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 25px 15px;
+  padding: 20px 15px;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
   text-align: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: var(--white);
+  background-color: var(--light-gray);
 }
 
 .statusbar a {
