--- a/css/notice.css
+++ b/css/notice.css
@@ -33,7 +33,7 @@
 
 .noticeboard {
   width: 100%;
-  height: 700px;
+  height: 550px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -51,20 +51,24 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 15px;
   margin-top: 30px;
   opacity: 80%;
   padding: 0 10px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+
+.notice-write span {
+  font-size: 15px;
 }
 
 .notice-content {
   width: 100%;
   display: flex;
   flex-direction: column;
-  background-color: var(--light-gray);
+  background-color: var(--white);
   padding: 20px;
-  border-radius: 10px;
-  margin-bottom: 15px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
 .notice-content-head {
@@ -72,7 +76,7 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 13px;
   text-align: center;
   font-size: 13px;
 }
