--- a/css/navbar.css
+++ b/css/navbar.css
@@ -8,19 +8,7 @@ header {
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   background-color: var(--white);
-}
-
-header .logo {
-  color: var(--color-text);
-  font-size: 18px;
-  padding-left: 8px;
-  font-weight: bolder;
-}
-
-header .logo_img {
-  color: var(--purple);
 }
 
 header .navbar a {
@@ -44,25 +32,13 @@ header .icons {
 }
 
 header .icons i {
-  font-size: 18px;
+  font-size: 20px;
   color: var(--color-text);
-  text-align: center;
-  background-color: var(--purple);
-  width: 35px;
-  height: 35px;
   text-align: center;
   line-height: 35px;
-  border-radius: 50%;
+  margin: 0 10px;
 }
 
-header .icons .sm-login {
-  background-color: var(--purple);
-  border-radius: 10px;
-  padding: 8px 15px;
-  color: var(--color-text);
-  font-size: 13px;
-  margin-right: 10px;
-}
 header .icons {
   display: none;
 }
