--- a/css/notice.css
+++ b/css/notice.css
@@ -1,6 +1,6 @@
 .heading {
   width: 100%;
-  height: 150px;
+  height: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -13,27 +13,16 @@
 .heading-box {
   width: 100%;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  flex-direction: column;
-}
-
-.heading-content {
-  width: 80%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background-color: var(--purple);
-  padding: 8px 25px;
-  border-radius: 15px;
-  margin-bottom: 10px;
-  font-size: 13px;
-  text-align: center;
+  font-size: 12px;
+  background-color: var(--light-gray);
+  padding: 20px 0;
 }
 
 .noticeboard {
   width: 100%;
-  height: 550px;
+  height: 500px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -43,23 +32,7 @@
 }
 
 .noticeboard-box {
-  width: 90%;
-}
-
-.notice-write {
   width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 30px;
-  opacity: 80%;
-  padding: 0 10px;
-  padding-bottom: 20px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-}
-
-.notice-write span {
-  font-size: 15px;
 }
 
 .notice-content {
@@ -76,20 +49,9 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 13px;
+  margin-bottom: 8px;
   text-align: center;
-  font-size: 13px;
-}
-
-.notice-content-head span:first-child {
-  background-color: var(--purple);
-  color: var(--white);
-  width: 20px;
-  height: 20px;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  font-size: 15px;
 }
 
 .notice-content-head span {
@@ -99,9 +61,9 @@
 .notice-content-foot {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
   align-items: center;
-  font-size: 10px;
+  font-size: 13px;
   opacity: 80%;
 }
 
