--- a/css/statusbar.css
+++ b/css/statusbar.css
@@ -3,22 +3,26 @@
   top: 0;
   left: 0;
   right: 0;
-  padding: 20px 15px;
+  padding: 15px 25px;
+  padding-bottom: 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
   z-index: 1000;
   text-align: center;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-  background-color: var(--white);
 }
 
 .statusbar a {
   color: var(--color-text);
-  font-size: 30px;
+  font-size: 22px;
+}
+
+.statusbar i {
+  font-size: 20px;
+  color: var(--color-text);
 }
 
 .statusbar span {
-  font-size: 15px;
+  font-size: 18px;
   font-weight: bolder;
 }
