--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import "navbar.css";
 @import "statusbar.css";
 @import "notice.css";
+@import "board.css";
 
 * {
   font-family: "Noto Sans KR", sans-serif;
@@ -10,7 +11,6 @@
   outline: none;
   border: none;
   text-decoration: none;
-  text-transform: capitalize;
   transition: all 0.2s linear;
 }
 
@@ -40,42 +40,44 @@ body {
 
   --border: 1px solid rgba(0, 0, 0, 0.2);
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-  --box-shadow: 0 12px 12px rgba(0, 0, 0, 0.05);
+  --box-shadow: 2px 2px 10px silver;
 }
 
 .home {
   width: 100%;
-  height: 400px;
-  background-color: var(--light-gray);
+  height: 300px;
 }
 
-.home .home-photo {
+.home-main {
   width: 100%;
   height: 100%;
-}
-
-.home .home-photo img {
-  width: 100%;
-  height: 100%;
-}
-
-.login {
-  width: 100%;
-  height: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 30px 0;
-  padding-bottom: 0;
+}
+
+.home-main h3 {
+  font-size: 25px;
+}
+
+.login {
+  width: 100%;
+  height: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 20px;
 }
 
 .login .login-box {
-  width: 95%;
+  width: 90%;
   height: 100%;
-  background-color: var(--light-gray);
-  border-radius: 15px;
-  padding: 25px;
+  padding: 0 25px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .login .login-subject {
@@ -86,7 +88,6 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  margin-bottom: 30px;
 }
 
 .login .login-header h3 {
@@ -98,34 +99,6 @@ body {
 .login .login-header span {
   opacity: 80%;
   font-size: 13px;
-}
-
-.login .login-content,
-.login .login-content2 {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.login .login-content {
-  margin-bottom: 10px;
-}
-
-.login .login-txt {
-  color: var(--white);
-  font-size: 10px;
-  background-color: var(--purple);
-  padding: 8px 8px;
-  border-radius: 25px;
-  margin-right: 5px;
-}
-
-.login .login-txt2 {
-  font-size: 10px;
-  background-color: var(--white);
-  padding: 8px 8px;
-  border-radius: 25px;
-  margin-right: 5px;
 }
 
 .calendar {
@@ -143,12 +116,20 @@ body {
   width: 90%;
   height: 10%;
   display: flex;
-  margin-bottom: 15px;
-  font-size: 15px;
+  margin-bottom: 13px;
+  font-size: 14px;
   font-weight: bolder;
   justify-content: flex-start;
   align-items: center;
+  text-align: center;
   opacity: 80%;
+}
+
+.calendar .calendar-subject i,
+.notice .notice-subject i,
+.book .book-subject i {
+  font-size: 18px;
+  margin-left: 10px;
 }
 
 .calendar .calendar-box {
@@ -182,26 +163,23 @@ body {
   width: 90%;
   height: 10%;
   display: flex;
-  margin-bottom: 15px;
-  font-size: 15px;
+  margin-bottom: 13px;
+  font-size: 14px;
   font-weight: bolder;
   justify-content: flex-start;
   align-items: center;
   opacity: 80%;
 }
 
-.calendar .calendar-subject i,
-.notice .notice-subject i,
-.book .book-subject i {
-  color: var(--purple);
-  margin-right: 5px;
+.notice-subject a {
+  color: var(--color-text);
 }
 
 .notice .notice-box {
   width: 85%;
   height: 30%;
   background-color: var(--light-gray);
-  border-radius: 15px;
+  border-radius: 25px;
   padding: 15px;
   display: flex;
   justify-content: space-between;
@@ -211,7 +189,7 @@ body {
 }
 
 .notice .notice-box1 {
-  background-color: var(--purple);
+  background-color: var(--light-gray);
 }
 
 .book .book-box {
