--- a/css/statusbar.css
+++ b/css/statusbar.css
@@ -10,6 +10,7 @@
   align-items: center;
   z-index: 1000;
   text-align: center;
+  background-color: var(--white);
 }
 
 .statusbar a {
@@ -23,6 +24,6 @@
 }
 
 .statusbar span {
-  font-size: 18px;
+  font-size: 16px;
   font-weight: bolder;
 }
