--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
 @import "statusbar.css";
 @import "notice.css";
 @import "board.css";
+@import "study.css";
 
 @font-face {
   font-family: "KOTRAHOPE";
