--- a/css/notice_text.css
+++ b/css/notice_text.css
@@ -1,10 +1,11 @@
 .notice_text {
   width: 100%;
-  height: 500px;
+  height: auto;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 100px 0;
 }
 
 .notice_text .notice_text-box {
@@ -55,6 +56,8 @@
 }
 
 .notice_text-content-main {
+  width: 100%;
+  height: auto;
   margin-top: 15px;
   margin-bottom: 30px;
   font-size: 12px;
