--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
 @import "study.css";
 @import "book.css";
 @import "notice_text.css";
+@import "board_text.css";
 
 @font-face {
   font-family: "KOTRAHOPE";
