--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
-@import "navbar.css";
-@import "statusbar.css";
+@import "header.css";
 @import "notice.css";
 @import "board.css";
 @import "study.css";
 @import "book.css";
 @import "notice_text.css";
 @import "board_text.css";
+@import "footer.css";
 
 @font-face {
   font-family: "KOTRAHOPE";
@@ -61,7 +61,7 @@ body {
 
 .home {
   width: 100%;
-  height: 300px;
+  height: 350px;
 }
 
 .home-main {
@@ -101,6 +101,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border: 1px dotted rgba(0, 0, 0, 0.2);
+  border-radius: 25px;
 }
 
 .login .login-main1 {
@@ -316,33 +318,14 @@ body {
   color: var(--black);
 }
 
-.footer {
-  width: 100%;
-  height: 100px;
-  margin-top: 30px;
-  border-top: 1px solid rgba(0, 0, 0, 0.2);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.footer .footer-box {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  padding: 0 25px;
-}
-
-.footer .footer-content {
-  width: 100%;
-  font-size: 12px;
-  opacity: 80%;
-}
-
 @media screen and (max-width: 768px) {
   header .icons {
     display: flex;
+  }
+
+  header #sm-login {
+    position: fixed;
+    right: 55px;
   }
 
   header .navbar {
@@ -358,13 +341,25 @@ body {
   header .navbar.active {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
   }
+
   header .navbar a {
     display: block;
     padding: 8px;
     margin: 3px;
     font-size: 15px;
   }
+
+  header .header-menu {
+    position: fixed;
+    right: 15px;
+  }
+
+  header #header-name {
+    position: fixed;
+    right: 165px;
+  }
 }
+
 /*calendar part*/
 #calendar {
   margin-left: auto;
