--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -10,14 +10,15 @@
 
 .talkboard-head {
   width: 90%;
+  height: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   text-align: center;
   border-bottom: var(--border);
   margin-bottom: 30px;
   margin-top: 20px;
-  padding: 0 20px;
+  padding: 0 25px;
   padding-bottom: 10px;
 }
 
@@ -26,10 +27,6 @@
   padding: 5px 10px;
   background-color: var(--purple);
   border-radius: 25px;
-}
-
-.talkboard-head_title {
-  font-size: 13px;
 }
 
 .talkboard .talkboard-box {
