--- a/css/login.css
+++ b/css/login.css
@@ -74,3 +74,13 @@
 .login .signupform a {
   color: #d09193;
 }
+
+#login-home .home-main img {
+  width: 115px;
+  height: 140px;
+}
+
+#login-home {
+  width: 100%;
+  height: 270px;
+}
