--- a/css/noticeboard/notice.css
+++ b/css/noticeboard/notice.css
@@ -41,6 +41,7 @@
   flex-direction: column;
   background-color: var(--white);
   padding: 15px;
+  padding-left: 25px;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
 
