--- a/css/signup.css
+++ b/css/signup.css
@@ -3,12 +3,11 @@
   height: auto;
   display: flex;
   justify-content: center;
-  align-items: center;
-  flex-direction: column;
+  align-content: center;
   margin-top: 50px;
 }
 
-.joinbox {
+.joinform {
   width: 100%;
   height: auto;
   display: flex;
@@ -16,27 +15,31 @@
   align-content: center;
 }
 
-.joinform {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-content: center;
+.join table {
+  font-size: 16px;
+  border-collapse: separate;
+  border-spacing: 10px;
 }
 
-.join table {
-  width: 80%;
-  font-size: 15px;
-  margin: auto;
+.join table tr,
+.join table td {
+  width: 100%;
+  height: 40px;
 }
 
 .join table .inputbox input,
 .join table .inputbox select {
-  background-color: var(--purple);
+  background-color: var(--color-hover);
   border-radius: 5px;
+  font-size: 16px;
+  width: 180px;
 }
 
-.join .inputbox {
-  width: 190px;
-  height: 30px;
-  border-radius: 25px;
+.join_btn {
+  position: fixed;
+  top: 440px;
+  font-size: 18px;
+  padding: 10px 20px;
+  border-radius: 20px;
+  background-color: var(--purple);
 }
