--- a/css/noticeboard/notice.css
+++ b/css/noticeboard/notice.css
@@ -49,7 +49,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
   margin-bottom: 8px;
   text-align: center;
   font-size: 15px;
