--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 @import "fixed_head_foot/footer.css";
 @import "login.css";
 @import "signup.css";
+@import "studyboard.css";
 
 @font-face {
   font-family: "KOTRAHOPE";
