--- a/css/fixed_head_foot/header.css
+++ b/css/fixed_head_foot/header.css
@@ -1,15 +1,15 @@
 header {
   height: 55px;
-  position: sticky;
+  position: fixed;
   top: 0;
   left: 0;
   right: 0;
-  padding: 15px 15px;
+  padding: 15px 25px;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  z-index: 1000;
   background-color: var(--white);
+  z-index: 1000;
 }
 
 header .navbar a {
@@ -30,18 +30,33 @@ header .icons {
   justify-content: center;
   align-items: center;
   text-align: center;
+  margin-right: 10px;
 }
 
 header .icons {
   display: none;
 }
 
+header .icons #sm-login {
+  margin-left: -50px;
+  font-size: 20px;
+}
+
+header .icons #home-bar {
+  margin-left: -50px;
+  font-size: 20px;
+}
+
+header .icons #join-home {
+  font-size: 20px;
+}
 header #header-before {
   color: var(--color-text);
   font-size: 22px;
 }
 
 header .header-menu {
+  position: fixed;
   font-size: 20px;
   color: var(--color-text);
 }
