--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -84,7 +84,8 @@
 .talk-content-foot {
   width: 100%;
   display: flex;
-  justify-content: flex-end;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
   font-size: 10px;
   opacity: 80%;
@@ -95,9 +96,11 @@
 }
 
 .talk-content-foot-etc {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   align-items: center;
+  margin-bottom: 10px;
 }
 .talk-content-foot-etc span {
   padding: 4px 8px;
@@ -108,4 +111,31 @@
 
 .talk-content-foot-etc .talk-comment {
   margin-left: 10px;
+}
+
+.talk-content-comment {
+  width: 100%;
+  display: none;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+  padding: 5px 15px;
+  background-color: var(--light-gray);
+  border-radius: 10px;
+}
+
+.talk-content-comment.active {
+  display: flex;
+}
+
+.talk-content-commentbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.talk-content-commentbox:last-child {
+  margin-bottom: 0;
 }
