--- a/css/noticeboard/notice.css
+++ b/css/noticeboard/notice.css
@@ -8,6 +8,7 @@
   padding: 15px 0;
   padding-bottom: 20px;
   background-color: var(--white);
+  margin-top: 55px;
 }
 
 .heading-box {
@@ -49,7 +50,7 @@
   width: 100%;
   display: flex;
   justify-content: flex-start;
-  align-items: flex-end;
+  align-items: center;
   margin-bottom: 8px;
   text-align: center;
   font-size: 15px;
