--- a/css/freeboard/board.css
+++ b/css/freeboard/board.css
@@ -50,17 +50,31 @@
 .talk-content-head {
   width: 100%;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
   text-align: center;
   font-size: 13px;
-  margin-left: 10px;
+  margin: 0 10px;
+  margin-right: 15px;
 }
 
 .talk-content-head img {
   width: 40px;
   height: 40px;
   margin-right: 5px;
+}
+
+.talk-content-left {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: row;
+}
+
+.talk-content-right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .talk-content-head2 {
@@ -73,11 +87,6 @@
 .talk-content-head2 span:last-child {
   font-size: 10px;
   opacity: 80%;
-}
-
-.talk-content-head3 {
-  position: fixed;
-  right: 50px;
 }
 
 .commentwrite-form {
