--- a/css/bookboard/book.css
+++ b/css/bookboard/book.css
@@ -5,19 +5,19 @@
   text-align: center;
 }
 
-.reservebox {
+.takeoutbox {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
-  padding: 15px 0;
   margin-top: 50px;
   background-color: var(--white);
+  padding: 0 30px;
 }
 
-.reservebox-left {
+.takeoutbox-left {
   width: 100%;
   height: 100%;
   display: flex;
@@ -25,16 +25,52 @@
   align-items: center;
 }
 
-.reservebox-right {
+.takeoutbox-right {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-.reserve-image img {
+.takeout-image img {
   width: 130px;
   height: 150px;
   object-fit: cover;
+}
+
+.takeoutbox-title {
+  margin-bottom: 20px;
+}
+
+.takeoutbox-title span {
+  font-size: 19px;
+  font-weight: 800;
+}
+
+.takeoutbox-info span {
+  font-size: 16px;
+}
+
+.takeoutbox-state {
+  margin-bottom: 30px;
+}
+.takeoutbox-state span {
+  font-size: 16px;
+}
+
+.state_text {
+  color: var(--red);
+}
+
+.takeoutbox-btn button {
+  background-color: var(--purple);
+  font-size: 16px;
+  border-radius: 15px;
+  padding: 5px 10px;
+}
+
+.takeout_btn {
+  margin-right: 10px;
 }
