--- a/css/style.css
+++ b/css/style.css
@@ -57,8 +57,7 @@ body {
   --gray: #eeeeee;
 
   --purple: #c0d3d8;
-  /*
-  --purple: #a69fef;*/
+  --red: #ff5c55;
 
   --border: 0.5px solid rgba(0, 0, 0, 0.2);
   --shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
