--- a/css/fixed_head_foot/header.css
+++ b/css/fixed_head_foot/header.css
@@ -63,8 +63,7 @@ header .header-menu {
 
 header #header-name {
   font-size: 20px;
-  font-weight: bold;
-  font-family: "Cafe24Oneprettynight";
+  font-family: "GangwonEdu_OTFBoldA";
 }
 
 header .header-title {
